Fixed background jump for middle screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -503,7 +503,10 @@ h3 {
 
   .game-page-background {
     background-position: center;
+    height: 100vh;
   } 
+
+  
 
 } 
 
